Refatoração do código e melhorias na autenticação
Realizadas alterações significativas no código para aprimorar a autenticação e garantir uma maior segurança no sistema. As seguintes melhorias foram implementadas:

1. Refatoração da classe de autenticação: Foram realizadas modificações na classe de autenticação para tornar o processo mais eficiente e seguro. Agora, o sistema utiliza criptografia avançada para proteger as credenciais dos usuários.

2. Implementação do controle de acesso: Foi adicionado um novo controle de acesso para garantir que apenas usuários autorizados tenham permissão para acessar determinados recursos e funcionalidades. Isso ajuda a prevenir acessos não autorizados e proteger informações sensíveis.

3. Melhoria na validação de tokens: A validação de tokens de autenticação foi aprimorada, tornando o processo mais robusto e confiável. Agora, o sistema verifica a autenticidade e validade dos tokens antes de conceder acesso aos recursos protegidos.

4. Refatoração dos endpoints de autenticação: Os endpoints relacionados à autenticação foram refatorados para seguir as melhores práticas de design de APIs. Agora, eles seguem um padrão consistente e fornecem mensagens de erro mais informativas em caso de falha na autenticação.

5. Implementação de políticas de segurança: Foram estabelecidas políticas de segurança mais rigorosas para proteger o sistema contra ataques comuns, como ataques de força bruta e injeção de código malicioso.

Essas mudanças visam melhorar a segurança do sistema e proteger os dados dos usuários. Com a refatoração do código e as melhorias na autenticação, estamos garantindo um ambiente mais confiável e seguro para nossos usuários.